--- a/index.html
+++ b/index.html
@@ -110,6 +110,20 @@ https://templatemo.com/tm-526-vanilla
                                 <p>Randy.</p>
                             </div>
                         </div>
+                        <div class="col-md-6">
+                            <div class="service-item">
+                                <p>...OOP 😳</p>
+                                <div class="line-dec"></div>
+                                <p>Randy.</p>
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="service-item">
+                                <p>...OOP 😳</p>
+                                <div class="line-dec"></div>
+                                <p>Randy.</p>
+                            </div>
+                        </div>
                     </div>
                 </div>                
             </div>
