--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@ https://templatemo.com/tm-526-vanilla
                             <div class="testimonials-item">
                                 <a href="img/1st-big-item.jpg" data-lightbox="image-1"><img src="img/1st-item.jpg" alt=""></a>
                                 <div class="text-content">
-                                    <h4>Agustin Urioste/h4>
+                                    <h4>Agustin Urioste</h4>
                                     <span>---</span>
                                 </div>
                             </div>
@@ -370,7 +370,7 @@ https://templatemo.com/tm-526-vanilla
                             <div class="testimonials-item">
                                 <a href="img/1st-big-item.jpg" data-lightbox="image-1"><img src="img/1st-item.jpg" alt=""></a>
                                 <div class="text-content">
-                                    <h4>Isaac Wilfong/h4>
+                                    <h4>Isaac Wilfong</h4>
                                     <span>---</span>
                                 </div>
                             </div>
@@ -480,10 +480,10 @@ https://templatemo.com/tm-526-vanilla
                          <!-- <p>Paragraph possible.</p> -->
                     </section>
                     <ul class="tabs clearfix" data-tabgroup="first-tab-group">
-                      <li><a href="#tab1" class="active">Class of 2022</a></li>
-                      <li><a href="#tab2">Class of 2023</a></li>
-                      <li><a href="#tab3">Class of 2024</a></li>
-                      <li><a href="#tab4">Class of 2025</a></li>
+                      <li><a href="#tab1" class="active">2022 Chapter</a></li>
+                      <li><a href="#tab2">2023 Chapter</a></li>
+                      <li><a href="#tab3">2024 Chapter</a></li>
+                      <li><a href="#tab4">2025 Chapter</a></li>
                     </ul>
                     </div>
                 </div>
@@ -535,13 +535,13 @@ https://templatemo.com/tm-526-vanilla
                   </div>
                   <br>
                   <div class="contactSquare2">
-                    <p>Jaden White (President)</p>
+                    <p>Noah Boylen (Recruitment Chair)</p>
                     <br>
                     <p>544 Spruce St</p>
                     <br>
-                    <p>Number</p>
+                    <p>(304)580-6250</p>
                     <br>
-                    <p>Whatever</p>
+                    <p>@nmorgan.23</p>
                   </div>
                 </div>
                 </div>
