--- a/index.html
+++ b/index.html
@@ -575,9 +575,9 @@ https://templatemo.com/tm-526-vanilla
                     <ul>
                         <li><a href="https://www.facebook.com/pilamwvu/about" target="_blank"><i class="fa fa-facebook"></i></a></li>
                         <li><a href="https://www.instagram.com/pilamwvu/" target="_blank"><i class="fa fa-instagram"></i></a></li>
-                        <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                        <!-- <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
                         <li><a href="#"><i class="fa fa-google"></i></a></li>
-                        <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
+                        <li><a href="#"><i class="fa fa-dribbble"></i></a></li> -->
                     </ul>
                     <br>
                     <p>Copyright &copy; 2022 your mom lmao
