--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@ https://templatemo.com/tm-526-vanilla
                             <div class="testimonials-item">
                                 <a href="img/1st-big-item.jpg" data-lightbox="image-1"><img src="img/1st-item.jpg" alt=""></a>
                                 <div class="text-content">
-                                    <h4>HJonah Andres</h4>
+                                    <h4>Jonah Andres</h4>
                                     <span>---</span>
                                 </div>
                             </div>
