--- a/index.html
+++ b/index.html
@@ -84,44 +84,44 @@ https://templatemo.com/tm-526-vanilla
                     <div class="row">
                         <div class="col-md-6">
                             <div class="service-item">
-                                <p>WHOLE BAG...</p>
+                                <p>SOMETHING</p>
                                 <div class="line-dec"></div>
-                                <p>Trust</p>
+                                <p>SOMETHING</p>
                             </div>
                         </div>
                         <div class="col-md-6" id="round">
                             <div class="service-item">
-                                <p>...OF JELLYBEANS...</p>
+                                <p>SOMETHING</p>
                                 <div class="line-dec"></div>
-                                <p>the</p>
+                                <p>SOMETHING</p>
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="service-item">
-                                <p>...UP MY...</p>
+                                <p>SOMETHING</p>
                                 <div class="line-dec"></div>
-                                <p>liquor,</p>
+                                <p>SOMETHING</p>
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="service-item">
-                                <p>...OOP 😳</p>
+                                <p>SOMETHING 😳</p>
                                 <div class="line-dec"></div>
-                                <p>Randy.</p>
+                                <p>SOMETHING</p>
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="service-item">
-                                <p>...OOP 😳</p>
+                                <p>SOMETHING 😳</p>
                                 <div class="line-dec"></div>
-                                <p>Randy.</p>
+                                <p>SOMETHING</p>
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="service-item">
-                                <p>...OOP 😳</p>
+                                <p>SOMETHING 😳</p>
                                 <div class="line-dec"></div>
-                                <p>Randy.</p>
+                                <p>SOMETHING</p>
                             </div>
                         </div>
                     </div>
